--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,6 @@
 <footer class="site-footer">
 
-  <p>Copyright &copy; <a href="{{ site.baseurl }}/">{{site.title}}</a></p>
+	<p>Copyright &copy; <a href="https://github.com/AkashKrDutta/AkashKrDutta.github.io/blob/master/LICENSE">MIT LICENSE</a></p>
   <p>Powered by <a href="https://github.com/jekyll/jekyll">Jekyll</a> 
-  on 
-  <a href="https://github.com/">Github</a>
 
 </footer>
