--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -174,7 +174,6 @@
   time{
     margin-left: 0px;
     font-style: normal;
-
   }
 
 }
@@ -183,6 +182,7 @@
   font-size: 38px;//42px;
   letter-spacing: -1px;
   line-height: 1;
+  font-weight: normal;
 
   @include media-query($on-laptop) {
     font-size: 36px;
@@ -227,7 +227,6 @@
   h2 {
     font-size: 32px;
     line-height:1em;
-
     @include media-query($on-laptop) {
       font-size: 28px;
     }
