--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,7 @@ $hover-color:      #DD1144;
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
+$blockquote-text-color: #454545;
 
 $code-backgroud-color: #29281e;
 $code-font-color:  #eee;  
