--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -182,7 +182,7 @@
   font-size: 38px;//42px;
   letter-spacing: -1px;
   line-height: 1;
-  font-weight: normal;
+  font-weight: 400;
 
   @include media-query($on-laptop) {
     font-size: 36px;
