Update personal info and include font awesome

--- a/css/main.scss
+++ b/css/main.scss
@@ -61,5 +61,5 @@ $on-laptop:        800px;
 
 @import url('http://fonts.googleapis.com/css?family=Open+Sans');
 // @import url('http://fonts.googleapis.com/css?family=Lato');
-// @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap');
