--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,14 +37,14 @@
 .site-nav {
   /*float: right;*/
   line-height: 56px;
-  border-top: 1px solid $grey-color-light;
-  border-bottom: 1px solid $grey-color-light;
+  border-top: 2px solid $grey-color;
+  border-bottom: 2px solid $grey-color;
   .menu-icon {
     display: none;
   }
 
   .page-link {
-    color: $grey-color;
+    color: $text-color;
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the first one
@@ -214,6 +214,7 @@
 
 
 .post-content {
+  font-weight: 400;
   p { padding:$spacing-unit/5 0; } 
   //  margin-bottom: $spacing-unit;
   h1 { 
