--- a/_includes/Aboutme.html
+++ b/_includes/Aboutme.html
@@ -14,8 +14,11 @@
   {% if site.github_username != empty %}
   <a href="https://github.com/{{site.github_username}}" title="GithubID: {{site.github_username}}"><i class="fa fa-github-square fa-3x"></i></a>&nbsp;
   {% endif %}
-  {% if site.twitter_username != empty %}
-  <a href="https://twitter.com/{{site.twitter_username}}" title="TwitterID: {{site.twitter_username}}"><i class="fa fa-twitter-square fa-3x"></i></a>
+  {% if site.fb_username != empty %}
+  <a href="https://facebook.com/{{site.fb_username}}" title="FacebookID: {{site.fb_username}}"><i class="fa fa-facebook-square fa-3x"></i></a>&nbsp;
+  {% endif %}
+  {% if site.linkedin_username != empty %}
+  <a href="https://linkedin.com/in/{{site.linkedin_username}}" title="LinkedinID: {{site.linkedin_username}}"><i class="fa fa-linkedin-square fa-3x"></i></a>
   {% endif %}
 
   {% endif %}
