--- a/css/main.scss
+++ b/css/main.scss
@@ -13,10 +13,12 @@ $base-line-height: 1.6em;
 
 $spacing-unit:     15px;
 
-$text-color:       #111;
-$background-color: #f9f9f9;
-$brand-color:      #2a7ae2;
-$brand-top-color:  #2583ad;
+$text-color:       #ffffff;
+$container-bg-color: #353535;
+//$background-color: #f9f9f9;
+$background-color: #252524;
+$brand-color:      #D6B345;
+$brand-top-color:  #009933;
 $hover-color:      #DD1144;
 
 $grey-color:       #828282;
