--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -117,7 +117,7 @@
   h4{
     font-size: $base-font-size;
     font-weight: bold;
-    color: $grey-color-dark;
+    color: $grey-color;
   }
   li{
     list-style: none; 
@@ -133,7 +133,7 @@
 .site-footer {
   clear: both;
   text-align: center;
-  background-color: #f9f9f9;
+  background-color: $container-bg-color;
   border-top: 1px solid $grey-color-light;
   margin: $spacing-unit 0; 
   padding: $spacing-unit 0;
@@ -183,6 +183,7 @@
   letter-spacing: -1px;
   line-height: 1;
   font-weight: 400;
+  color: $brand-top-color ;
 
   @include media-query($on-laptop) {
     font-size: 36px;
